# UDE

./: CMakeLists.txt  README.md  main.cpp  testmath.cpp
UtCore/: CMakeLists.txt  UApp.cpp  UApp.h
UtEngine/: CMakeLists.txt  UActor.cpp  UActor.h  UCamera.cpp  UCamera.h  UMesh.cpp  UMesh.h  UModel.cpp  UModel.h  UShader.cpp  UShader.h  UUserInterface.cpp  UUserInterface.h  UWorld.cpp  UWorld.h  glad.h
UtGui/: CMakeLists.txt  UButton.cpp  UButton.h  UEventHandler.cpp  UEventHandler.h  UWidget.cpp  UWidget.h
UtMath/: CMakeLists.txt  USum.cpp  USum.h
include/: stb_image_config.h
include/SDL2/: SDL_config.h
include/glad/: glad.c
resource/: fragmentShader.frag  model_loading.frag  uifrag.frag  uivert.vert  vertexShader.vert  yxa_1.mtl
